# ipol.demo

./: demo.conf  demo.py
app/xxx_clg/: app.py  bin
app/xxx_clg/archive/: index.db
app/xxx_clg/input/: index.cfg
app/xxx_clg/input/auto2/: fes  fes2
app/xxx_clg/input/baboon_hom/: t.tiff
app/xxx_clg/input/flow_auto/: f_0_lena.tiff  f_1_lena.tiff  f_2_peppers.tiff  f_3_baboon.tiff  fes.sh  pf_1_baboon.tiff  pf_2_peppers.tiff  pf_3_baboon.tiff  scr  v_3_spiral.tiff
app/xxx_clg/input/flow_auto/test/: a  a_1  a_2  f.hsmw  f.lluis  ooo  ooo_01  xd  xd_01  yf  yf_01
app/xxx_clg/input/lena_hom/t/: f.tiff
app/xxx_clg/input/lena_rot/: t.tiff
app/xxx_clg/input/peppers_halfpixel/: t.tiff
app/xxx_clg/input/peppers_onepixel/: t.tiff
app/xxx_clg/input/spiral_identity/: t.tiff
app/xxx_clg/source/optical_flow/: CMakeLists.txt
app/xxx_clg/source/optical_flow/source/: CMakeLists.txt  clg_of.c  nrutil.c  nrutil.h  test_rgb2gray.c  test_swaptiff.c
app/xxx_clg/template/: input.html  input_form_select.html  params.html  result.html  wait.html
app/xxx_haldo/: app.py
app/xxx_haldo/archive/: index.db
app/xxx_haldo/template/: input.html  params.html
